# neinjin

./: .gitignore  .ruff.toml  init.txt
.github/workflows/: nrsr.yaml
10j/: main.py  pyproject.toml
c2rust/: .gitrepo
c2rust/c2rust-ast-builder/src/: builder.rs
c2rust/c2rust-ast-exporter/: build.rs
c2rust/c2rust-ast-exporter/src/: lib.rs
c2rust/c2rust-transpile/src/: lib.rs
c2rust/c2rust-transpile/src/build_files/: mod.rs
c2rust/c2rust-transpile/src/c_ast/: conversion.rs  iterators.rs  mod.rs
c2rust/c2rust-transpile/src/cfg/: mod.rs
c2rust/c2rust-transpile/src/rust_ast/: mod.rs
c2rust/c2rust-transpile/src/translator/: assembly.rs  atomics.rs  builtins.rs  comments.rs  literals.rs  main_function.rs  mod.rs  named_references.rs  operators.rs  simd.rs  structs.rs  variadic.rs
cli/: 10j  _provision.sh  constants.py  hermetic.py  main.py  provisioning.py  pyproject.toml  repo_root.py  sha256sum.py
cli/sh/: provision.sh
